refactor: another padding count

--- a/source/scss/components/_main-revenue-hour.scss
+++ b/source/scss/components/_main-revenue-hour.scss
@@ -1,8 +1,6 @@
 .revenue-hour {
-    @include column;
-    justify-content: space-between;
     align-items: center;
-    padding: 30px 70px;
+    padding: 0 40px;
     span {
         @include fontProperties($color: $colorSubtitle);
         position: relative;
