--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -5,7 +5,10 @@ main {
     padding: 10px;
     background: $colorBackground;
     section {
+        @include column;
+        justify-content: space-between;
         margin: 10px;
+        padding: 30px;
         background: $colorBase;
         box-shadow: 0 0 6px 6px $colorSearch;
     }
