feat: added items for checking scrolls

--- a/source/scss/global/_variables.scss
+++ b/source/scss/global/_variables.scss
@@ -4,6 +4,7 @@ $colorSearch: #c8c8c8;
 $colorTitle: #777777;
 $colorSubtitle: #bfbfbf;
 $colorBackground: #f0f0f0;
+$colorBackgroundFeed: #fcfcfc;
 $colorBorder: #f1f1f1;
 $colorBackInput: #f8f8f8;
 $colorFeedTime: #979797;
