--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,6 +5,8 @@
 @import "./components/nav";
 @import "./components/header";
 @import "./components/main";
+    @import "./components/main-revenue-hour";
+    @import "./components/main-feed";
 @import "./components/aside";
 @import "./components/footer";
 
