--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -599,7 +599,18 @@ main {
 }
 
 main section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 10px;
+  padding: 30px;
   background: #ffffff;
   -webkit-box-shadow: 0 0 6px 6px #c8c8c8;
           box-shadow: 0 0 6px 6px #c8c8c8;
@@ -646,6 +657,152 @@ main section {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 calc(100% - 20px);
           flex: 1 0 calc(100% - 20px);
+}
+
+.revenue-hour {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 40px;
+}
+
+.revenue-hour span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #bfbfbf;
+  position: relative;
+  padding: 8px;
+}
+
+.revenue-hour span:first-of-type:before {
+  content: '';
+  position: absolute;
+  bottom: 12px;
+  left: -2px;
+  border: 3px solid transparent;
+  border-bottom: 6px solid #a889e9;
+}
+
+.revenue-hour span:last-of-type:before {
+  content: '';
+  position: absolute;
+  top: 12px;
+  left: -2px;
+  border: 3px solid transparent;
+  border-top: 6px solid #fd566f;
+}
+
+.circle {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 124px;
+  height: 124px;
+  border-radius: 50%;
+  background: #c8c8c8 url(../img/main/circle-percentage.png) no-repeat center/cover;
+}
+
+.circle:before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 104px;
+  height: 104px;
+  border-radius: 50%;
+  background: #ffffff;
+}
+
+.circle:after {
+  content: '';
+  position: absolute;
+  top: 18px;
+  left: 18px;
+  width: 88px;
+  height: 88px;
+  border-radius: 50%;
+  background: #ffffff;
+  -webkit-box-shadow: 0 0 3px 3px #c8c8c8;
+          box-shadow: 0 0 3px 3px #c8c8c8;
+}
+
+.circle h2 {
+  z-index: 1;
+  font-size: 25px;
+  font-weight: 700;
+  color: transparent;
+  background: linear-gradient(315deg, #6359b0, #b26ae1);
+  -webkit-background-clip: text;
+}
+
+.feed img {
+  width: 42px;
+  height: 42px;
+  -o-object-fit: none;
+     object-fit: none;
+  -o-object-position: center 15%;
+     object-position: center 15%;
+}
+
+.feed h6 {
+  padding-top: 13px;
+}
+
+.feed .feeds {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+  margin-top: 40px;
+  height: 200px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.feed .feed__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.feed p {
+  position: relative;
+  margin: 0 0 20px 50px;
+  padding: 20px;
+  font-weight: 400;
+  background: #fcfcfc;
+  border: 1px solid #f1f1f1;
+}
+
+.feed p:not(:first-child):before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -17px;
+  width: 4px;
+  height: calc(100% + 20px);
+  background: #f1f1f1;
+}
+
+.feed p:last-child:before {
+  height: 100%;
+}
+
+.feed p:first-child {
+  margin-left: 20px;
+}
+
+.feed em {
+  font-weight: 800;
 }
 
 aside {
