fix: modified paddings

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -5,8 +5,12 @@
 @import "./components/nav";
 @import "./components/header";
 @import "./components/main";
+    @import "./components/main-revenue-month";
     @import "./components/main-revenue-hour";
     @import "./components/main-feed";
+    @import "./components/main-tasks";
+    @import "./components/main-progress";
+    @import "./components/main-shipments";
 @import "./components/aside";
 @import "./components/footer";
 
