--- a/source/scss/components/_main-revenue-hour.scss
+++ b/source/scss/components/_main-revenue-hour.scss
@@ -1,10 +1,13 @@
 .revenue-hour {
     align-items: center;
-    padding: 0 40px;
+    padding: 30px 70px;
     span {
         @include fontProperties($color: $colorSubtitle);
         position: relative;
         padding: 8px;
+        &:first-of-type {
+            margin-left: 8px;
+        }
         &:first-of-type:before {
             content: '';
             position: absolute;
