--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -663,7 +663,7 @@ main section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 40px;
+  padding: 30px 70px;
 }
 
 .revenue-hour span {
@@ -672,6 +672,10 @@ main section {
   color: #bfbfbf;
   position: relative;
   padding: 8px;
+}
+
+.revenue-hour span:first-of-type {
+  margin-left: 8px;
 }
 
 .revenue-hour span:first-of-type:before {
@@ -803,6 +807,99 @@ main section {
 
 .feed em {
   font-weight: 800;
+}
+
+.progress {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 30px 50px 25px;
+}
+
+.progress h2 {
+  font-size: 20px;
+  font-weight: 700;
+  color: transparent;
+  background: -webkit-gradient(linear, right top, left top, from(#8841af), to(#708ae6));
+  background: linear-gradient(270deg, #8841af, #708ae6);
+  -webkit-background-clip: text;
+  padding-bottom: 10px;
+}
+
+.progress span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #bfbfbf;
+  position: relative;
+  padding: 8px;
+}
+
+.progress span:first-of-type {
+  margin-left: 8px;
+}
+
+.progress span:first-of-type:before {
+  content: '';
+  position: absolute;
+  bottom: 12px;
+  left: -2px;
+  border: 3px solid transparent;
+  border-bottom: 6px solid #a889e9;
+}
+
+.progress span:last-of-type:before {
+  content: '';
+  position: absolute;
+  top: 12px;
+  left: -2px;
+  border: 3px solid transparent;
+  border-top: 6px solid #fd566f;
+}
+
+.bar-chart {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 88px;
+          flex: 1 0 88px;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 30px 0 20px;
+}
+
+.bar-chart .bar-chart__item {
+  position: relative;
+  width: 8%;
+  height: 100%;
+  background: #f0f0f0;
+  border-radius: 6px;
+}
+
+.bar-chart .bar-chart__item:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-radius: 6px;
+  background: -webkit-gradient(linear, left bottom, left top, from(#8841af), to(#708ae6));
+  background: linear-gradient(360deg, #8841af, #708ae6);
+}
+
+.bar-chart .bar-chart__item:nth-child(3n+1):after {
+  height: 53%;
+}
+
+.bar-chart .bar-chart__item:nth-child(3n+2):after {
+  height: 69%;
+}
+
+.bar-chart .bar-chart__item:nth-child(3n+3):after {
+  height: 47%;
 }
 
 aside {
