--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -99,6 +99,11 @@
         justify-content: space-between;
         width: 100%;
     }
+    .revenue-month__title {
+        label {
+            display: none;
+        }
+    }
 }
 
 @media (max-width: 600px) {
