--- a/source/scss/components/_main-tasks.scss
+++ b/source/scss/components/_main-tasks.scss
@@ -28,12 +28,13 @@
         display: flex;
         justify-content: space-between;
         margin: 0;
-        padding: 13px 0;
+        padding: 10px 0;
         border-bottom: 1px solid $colorBorder;
     }
     li > p {
         margin-left: 30px;
-        height: 12px;
+        padding-top: 3px;
+        height: 15px;
         overflow: hidden;
     }
     li:nth-child(2n) {
@@ -41,13 +42,16 @@
     }
     .clock {
         flex: 0 0 55px;
+        display: flex;
+        align-items: center;
         margin-left: 20px;
         position: relative;
+        overflow: visible;
         &:before {
             content: '';
             position: absolute;
-            top: 0;
-            left: -15px;
+            top: 3px;
+            left: -17px;
             width: 12px;
             height: 12px;
             background: url(../img/main/clock.png);
@@ -57,7 +61,7 @@
         position: relative;
         display: flex;
         align-items: center;
-        @include fontProperties($color: $colorTaskTitle);
+        @include fontProperties($weight: $weightStep*8, $color: $colorTaskTitle);
         height: 17px;
         padding-left: 30px;
         white-space: nowrap;
@@ -74,12 +78,12 @@
         &:after {
             content: '';
             position: absolute;
-            top: 5px;
+            top: 4px;
             left: 9px;
             width: 3px;
             height: 6px;
-            border-right: 1px solid $colorBase;
-            border-bottom: 1px solid $colorBase;
+            border-right: 2px solid $colorBase;
+            border-bottom: 2px solid $colorBase;
             transform: rotate($angleStep);
         }
     }
