--- a/source/scss/components/_main-revenue-month.scss
+++ b/source/scss/components/_main-revenue-month.scss
@@ -1,6 +1,6 @@
 .revenue-month {
     @include column;
-    padding-bottom: 0;
+    padding-bottom: 15px;
     .revenue-month__title {
         flex: 0 0 auto;
         display: flex;
@@ -27,38 +27,97 @@
     }
 }
 
-.line-chart__graph {
+.line-chart {
     flex: 1 0 auto;
-    min-width: 100px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
+.line-chart__vertical {
+    flex: 0 0 auto;
     @include column;
     justify-content: space-between;
-    margin: 25px 0;
-    P {
-        position: relative;
-        &:after {
-            content: '';
-            position: absolute;
-            top: 10px;
-            left: 60px;
-            width: calc(100% - 60px);
-            height: 1px;
-            background: $colorSearchAside;
-        }
+    margin-right: 2vw;
+    margin-bottom: 50px;
+}
+
+.line-chart__graph {
+    flex: 1 0 auto;
+    width: 0;
+    padding: 5px 0 15px;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.line-chart__block {
+    height: 38px;
+    border-top: 1px solid $colorBackground;
+    &:nth-child(4) {
+        height: 25px;
     }
 }
-.line-chart__bottom {
+
+.months {
+    position: relative;
     display: flex;
-    margin-left: 60px;
-    .months {
-        flex: 1 0 auto;
-        display: flex;
-        justify-content: space-around;
-        width: 0;
-        padding-bottom: 30px;
-        overflow-x: visible;
-        overflow-y: hidden;
-    }
     p {
-        padding: 0 5px;
+        padding: 0 15px;
+    }
+    .line-red {
+        content: '';
+        position: absolute;
+        top: -85px;
+        left: 0;
+        width: 579px;
+        height: 50px;
+        background: url(../img/main/line-red.png) no-repeat center/100% 100%,
+        url(../img/main/square-red.png) no-repeat 0% 0%,
+        url(../img/main/square-red.png) no-repeat 6.1% 90%,
+        url(../img/main/square-red.png) no-repeat 20.3% 0%,
+        url(../img/main/square-red.png) no-repeat 40.5% 65%,
+        url(../img/main/square-red.png) no-repeat 65.6% 13%,
+        url(../img/main/square-red.png) no-repeat 78.3% 100%,
+        url(../img/main/square-red.png) no-repeat 95% 17%,
+        url(../img/main/square-red.png) no-repeat 100% 60%;
+        overflow: hidden;
+    }
+    .line-blue {
+        content: '';
+        position: absolute;
+        top: -85px;
+        left: 0;
+        width: 579px;
+        height: 36px;
+        background: url(../img/main/line-blue.png) no-repeat center/100% 100%,
+        url(../img/main/square-blue.png) no-repeat 0% 95%,
+        url(../img/main/square-blue.png) no-repeat 10% 47%,
+        url(../img/main/square-blue.png) no-repeat 18% 97%,
+        url(../img/main/square-blue.png) no-repeat 28.5% 0%,
+        url(../img/main/square-blue.png) no-repeat 50% 75%,
+        url(../img/main/square-blue.png) no-repeat 70.1% 25%,
+        url(../img/main/square-blue.png) no-repeat 89.5% 90%,
+        url(../img/main/square-blue.png) no-repeat 100% 30%;
+        overflow: hidden;
+    }
+    .line-purple {
+        content: '';
+        position: absolute;
+        top: -74px;
+        left: 0;
+        width: 579px;
+        height: 46px;
+        background: url(../img/main/line-purple.png) no-repeat center/100% 100%,
+        url(../img/main/square-purple.png) no-repeat 0% 0%,
+        url(../img/main/square-purple.png) no-repeat 13.5% 90%,
+        url(../img/main/square-purple.png) no-repeat 20% 0%,
+        url(../img/main/square-purple.png) no-repeat 30% 13%,
+        url(../img/main/square-purple.png) no-repeat 38.3% 73%,
+        url(../img/main/square-purple.png) no-repeat 49.6% 0%,
+        url(../img/main/square-purple.png) no-repeat 58.8% 95%,
+        url(../img/main/square-purple.png) no-repeat 71% 80%,
+        url(../img/main/square-purple.png) no-repeat 86% 100%,
+        url(../img/main/square-purple.png) no-repeat 96.4% 65%,
+        url(../img/main/square-purple.png) no-repeat 100% 80%;
     }
 }
