fix: shadows for sections fixed

--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -10,7 +10,7 @@ main {
         margin: 10px;
         padding: 30px;
         background: $colorBase;
-        box-shadow: 0 0 6px 6px $colorSearch;
+        box-shadow: 2px 2px 6px 3px $colorSearch;
     }
 }
 
