--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -65,6 +65,9 @@
             .nav__search {
                 order: 2;
                 flex: 1 1 1100px;
+                &:after {
+                    right: calc(5% + 15px);
+                }
                 input {
                 width: 90%;
                 }
@@ -92,7 +95,7 @@
         order: 1;
         height: 50px;
         a {
-            padding: 0 calc((100vw - 146px)/12);
+            padding: 0 calc((100vw - 157px)/12);
         }
     }
     .flex:last-child {
