feat: add hover effects

--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -7,7 +7,25 @@ aside {
         justify-content: space-between;
         @include gradient();
         a {
+            position: relative;
             width: 33%;
+            &:hover {
+                background: #c54556;
+            }
+            &:hover:after {
+                display: block;
+            }
+            &:after {
+                content: '';
+                position: absolute;
+                top: calc(100% - 5px);
+                left: calc(50% - 5px);
+                display: none;
+                width: 7px;
+                height: 7px;
+                background: #c54556;
+                transform: rotate(45deg);
+            }
         }
     }
     label {
@@ -82,6 +100,7 @@ aside {
         height: 19px;
         border: none;
         background: transparent url(../img/chat/edit.png) no-repeat center/cover;
+        cursor: pointer;
     }
 }
 
