--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -35,6 +35,26 @@
     @include gradient($angleStep*4);
     @include column;
     flex: auto;
+    label {
+        display: block;
+        padding-top: 28px;
+        &[for="nav__btn--1"] {
+            background: url(../img/nav/home.png) no-repeat center top;
+        }
+        &[for="nav__btn--2"] {
+            background: url(../img/nav/stactics.png) no-repeat center top;
+        }
+        &[for="nav__btn--3"] {
+            background: url(../img/nav/user.png) no-repeat center top;
+        }
+        &[for="nav__btn--4"] {
+            background: url(../img/nav/settings.png) no-repeat center top;
+        }
+        &[for="nav__btn--5"] {
+            background: url(../img/nav/information.png) no-repeat center top;
+        }
+    }
+
     a {
         position: relative;
         @include column;
@@ -42,6 +62,11 @@
         font-size: 10px;
         color: $colorBase;
         padding: 15px 0;
+        .power {
+            width: 20px;
+            height: 20px;
+            background: url(../img/nav/power-button.png) no-repeat center;
+        }
         &:first-child {
             padding-top: 30px;
         }
@@ -69,21 +94,9 @@
         &:last-child:hover:after {
             display: none;
         }
-        img {
-            display: block;
-            margin: 0 auto;
-            padding-bottom: 10px;
-        }
     }
 }
 
 input[type="radio"] {
     display: none;
 }
-// a:after {
-
-// }
-// a:hover:after {
-//     display: block;
-//     background: #c54556;
-// }
